force-app/main/default/objects/smagicinteract__Incoming_SMS__c/smagicinteract__Incoming_SMS__c.object-meta.xml
<CustomObject>
    <customHelpPage>smagicinteract__SMSMagicHelp</customHelpPage>
    <label>Incoming SMS</label>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Incoming SMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incoming SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>