force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__actionTaken__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__actionTaken__c</fullName>
    <label>actionTaken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>