force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Case__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Incoming SMS</relationshipLabel>
    <relationshipName>Incoming_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>