force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__external_field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__external_field__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>external field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>