force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>