force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__Quick_Reply_URL__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Quick_Reply_URL__c</fullName>
    <label>Quick Reply URL</label>
    <type>Url</type>
</CustomField>