force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__SMS_Text__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__SMS_Text__c</fullName>
    <label>SMS Text</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>