force-app/main/default/objects/smagicinteract__Incoming_SMS__c/fields/smagicinteract__taskId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__taskId__c</fullName>
    <label>taskId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>