force-app/main/default/objects/smagicinteract__Incoming_SMS__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__Inbound_Number__c</columns>
    <columns>smagicinteract__Mobile_Number__c</columns>
    <columns>smagicinteract__SMS_Text__c</columns>
    <columns>smagicinteract__actionTaken__c</columns>
    <columns>smagicinteract__external_field__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>